<resources>
    <string name="app_name">App Launch Demo</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="log_out_title">Log Out</string>
    <string name="subscription">Subscription</string>
    <string name="buy_now">Buy Now</string>
    <string name="subscription1_desc">3 months access to all audio books</string>
    <string name="three_months">3 MONTHS</string>
    <string name="amt399">Rs 399/-</string>
    <string name="twelve_months">12 MONTHS</string>
    <string name="amt999">Rs 999/-</string>
    <string name="subscription2_desc">12 months access to all audio books</string>
</resources>
