<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">
<LinearLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.ibm.examples.yashsoni.applaunchdemo.SubscriptionActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            android:background="@color/colorPrimaryDark">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@android:color/transparent">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/log_out_title"
                    android:layout_alignParentEnd="true"
                    android:textColor="@android:color/white"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="5dp"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </RelativeLayout>
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/subscription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:textSize="30sp"
            android:textColor="#000000"
            android:textStyle="bold"
            android:gravity="center_horizontal"
            android:text="@string/subscription"/>

        <RelativeLayout
            android:id="@+id/subsc399"
            android:layout_width="300dp"
            android:layout_height="200dp"
            android:layout_marginTop="55sp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/rectangle">

            <RelativeLayout
                android:id="@+id/subsc399_title"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:background="#8DB600"
                >

                <TextView
                    android:id="@+id/textView_3months"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:gravity="center_horizontal"
                    android:text="@string/three_months"
                    android:textColor="#000000"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textView_3months_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="57dp"
                    android:fontFamily="sans-serif-black"
                    android:gravity="center_horizontal"
                    android:text="@string/amt399"
                    android:textColor="#000000"
                    android:textSize="40sp"
                    android:textStyle="bold" />

            </RelativeLayout>

            <TextView
                android:id="@+id/subsc399_desc"
                android:layout_width="wrap_content"
                android:layout_marginTop="70sp"
                android:layout_height="wrap_content"
                android:text="@string/subscription1_desc"
                android:textColor="#000000"
                android:gravity="center_horizontal"
                android:textSize="20sp"/>

            <Button
                android:id="@+id/buy_now"
                android:layout_centerHorizontal="true"
                android:layout_width="200sp"
                android:layout_height="50sp"
                android:text="@string/buy_now"
                android:textSize="20sp"
                android:textColor="#ffffff"
                android:layout_marginTop="140sp"
                android:background="@color/colorPrimary"/>

        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/subsc999"
            android:layout_width="300dp"
            android:layout_height="200dp"
            android:layout_marginTop="280sp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/rectangle">

            <RelativeLayout
                android:id="@+id/subsc999_title"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:background="#8DB600"
                >

                <TextView
                    android:id="@+id/textView_12months"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:gravity="center_horizontal"
                    android:text="@string/twelve_months"
                    android:textColor="#000000"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textView_12months_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="57dp"
                    android:fontFamily="sans-serif-black"
                    android:gravity="center_horizontal"
                    android:text="@string/amt999"
                    android:textColor="#000000"
                    android:textSize="40sp"
                    android:textStyle="bold" />

            </RelativeLayout>

            <TextView
                android:id="@+id/subsc999_desc"
                android:layout_width="wrap_content"
                android:layout_marginTop="70sp"
                android:layout_height="wrap_content"
                android:text="@string/subscription2_desc"
                android:textColor="#000000"
                android:gravity="center_horizontal"
                android:textSize="20sp"/>

            <Button

                android:layout_centerHorizontal="true"
                android:layout_width="200sp"
                android:layout_height="50sp"
                android:text="@string/buy_now"
                android:textSize="20sp"
                android:textColor="#ffffff"
                android:layout_marginTop="140sp"
                android:background="@color/colorPrimary"/>

        </RelativeLayout>


    </RelativeLayout>

</LinearLayout>
</ScrollView>